# SteamFlow

./: AFTER_RELEASE.md  COMPARISON.md  CONTRIBUTING.md  Cargo.toml  Proton_Graphics_Investigation_Plan.md  README.md  ROADMAP.md  STEAMFLOW_TECHNICAL.md  TODO.md
.github/agents/: steamflow-rust.agent.md
.github/workflows/: rust.yaml
OpenSteamClient/: Directory.Build.props  OpenSteamClient.sln
OpenSteamClient/tools/callbackdumper_src/: Program.cs  callbackdumper.csproj
OpenSteamClient/tools/protobuftester_src/: protobuftester.csproj
docs/architecture/decisions/: 0001-runner-abstraction.md  0002-structured-launch-errors.md
examples/: debug_parameters.json
package/opensteamclient-git/: PKGBUILD
src/: cloud_sync.rs  cm_list.rs  config.rs  depot_browser.rs  download_pipeline.rs  install.rs  launch.rs  lib.rs  library.rs  main.rs  models.rs  proton.rs  steam_api.rs  steam_client.rs  ui.rs  utils.rs
src/infra/: mod.rs
src/infra/logging/: debug_utils.rs  event_log.rs  mod.rs  session.rs  tests.rs  wine_capture.rs
src/infra/runners/: mod.rs  proton_tkg.rs  tests.rs  trait.rs  wine_tkg.rs
src/launch/: diagnostics.rs  dll_provider_resolver.rs  mod.rs  pipeline.rs  verification_tests.rs
src/launch/fixups/: mod.rs
src/launch/fixups/seed_scripts/: 1151640.rhai  227300.rhai  271590.rhai  359550.rhai
src/launch/fixups/seeds/: 22300.rhai  22370.rhai  409710.rhai  72850.rhai
src/launch/stages/: build_command.rs  build_environment.rs  finalize.rs  mod.rs  preflight.rs  prepare_prefix.rs  resolve_components.rs  resolve_dll_providers.rs  resolve_game.rs  resolve_game_fixups.rs  resolve_profile.rs  spawn_process.rs
src/launch/validators/: invariants.rs  mod.rs  overrides.rs
tests/: compat_discovery.rs  compatibility_validator_tests.rs  dll_override_tests.rs  dll_resolution_report.rs  dxvk_evidence_tests.rs  launch_summary_tests.rs  library_scan_fallback.rs  path_resolution.rs  preflight_integration_tests.rs  repro_issue.rs  runner_consistency_tests.rs  runner_root_derivation.rs  staged_launch_failure_tests.rs  symlink_deployment.rs
