[package]
name = "steamflow"
version = "0.1.0"
edition = "2021"
description = "SteamFlow launcher using steam-vent for auth/network and egui for UI"
license = "MIT"

[dependencies]
anyhow = "1"
directories = "5"
eframe = { version = "0.33", default-features = true }
egui = "0.33"
image = { version = "0.25", default-features = false, features = ["jpeg", "png"] }
keyvalues-serde = "0.2"
prost = "0.13"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "blocking"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# Keep alongside keyvalues-serde: this crate is required for raw/binary appinfo VDF parsing.
steam-vdf-parser = "0.1.1"
steam-vent = "0.4.2"
steam-vent-proto = "=0.5.2"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "fs", "time"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
walkdir = "2"
zip = { version = "7.2.0", default-features = false, features = ["deflate"] }
hex = "0.4"
sha1 = "0.10"
flate2 = "1"
xz2 = "0.1"
cbc = "0.1"
aes = "0.8"
steam-cdn = "1.0.0"

[patch.crates-io]
steam-cdn = { path = "vendor/steam-cdn" }

[package.metadata.deb]
name = "steamflow"
maintainer = "SteamFlow Contributors"
copyright = "2026, SteamFlow Contributors"
license-file = "LICENSE"
section = "games"
priority = "optional"
depends = "$auto, libssl3"
assets = [
    ["target/release/steamflow", "usr/bin/steamflow", "755"],
]
